[tool.poetry]
name = "energy-arakul"
version = "0.1.0"
description = ""
authors = ["Team30"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.1.1"
scikit-learn = "^1.3.1"
matplotlib = "^3.8.0"
datetime = "^5.2"
optuna = "^3.4.0"
catboost = "^1.2.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "main:main"